profile stats and nav

--- a/OmneFictio.Web/Views/Profile/Profile.cshtml
+++ b/OmneFictio.Web/Views/Profile/Profile.cshtml
@@ -19,22 +19,75 @@
 }
 <div class="profile-cont">
     <div class="profile-details">
-        <div class="pr-img_cont">
-            <img src="" alt="">
+        <div class="pr-header">
+            <div class="pr-img_cont">
+                <img src="/images/onerror/user_no_photo_300x300.png" alt="" onerror="this.onerror=null; this.closest('.pr-img_cont').remove()">
+            </div>
+            <div class="pr-name">
+                <span class="pr-username">(mrathletic)</span>
+                <span class="pr-displayname">MrBombastic</span>
+            </div>
         </div>
-        <span class="pr-username">(mrathletic)</span>
-        <span class="pr-displayname">MrBombastic</span>
-        <span class="pr-bio">This is my bio. Lalala, no one can change this lalala, camon lazy irşat come here and change this shit when you are than. When is that? Probably next year!</span>
+        <span class="pr-bio">This is my bio. Lalala, no one can change this lalala, camon lazy irşat come here and change this shit when you are ready. When is that? Probably next year!</span>
+        <div class="pr-properties">
+            <span class="pr-nsfw_warning">NSFW <i class="bi bi-exclamation-circle"></i></span>
+            <span class="pr-moderator">Moderator <i class="bi bi-shield"></i></span>
+        </div>
+        <div class="pr-email_cont">
+            <span class="pr-email">irsat000@gmail.com</span>
+            <a class="pr-verifyemail">(Verify)</a>
+        </div>
+        <span class="pr-gold">6546 <i class="bi bi-coin"></i></span>
+        <div class="pr-stats">
+            <span>User stats</span>
+            <div class="prs-userstats">
+                <div class="prs-column">
+                    <span class="stat-reputation">313</span>
+                    <span>REP</span>
+                </div>
+                <div class="prs-column">
+                    <span class="stat-follow">104</span>
+                    <span>Follow</span>
+                </div>
+                <div class="prs-column">
+                    <span class="stat-gifts">26 + 9</span>
+                    <span>Gift</span>
+                </div>
+            </div>
+            <span>Post stats</span>
+            <div class="pr-postingstats">
+                <div class="prs-column">
+                    <span class="stat-likes">987</span>
+                    <span>Like</span>
+                </div>
+                <div class="prs-column">
+                    <span class="stat-follow">54</span>
+                    <span>Saved</span>
+                </div>
+                <div class="prs-column">
+                    <span class="stat-gifts">10 + 4</span>
+                    <span>Post</span>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="profile-tabs">
-        <a data-tab="stats"><i class="bi bi-info-square"></i></a>
-        <a data-tab="posts"><i class="bi bi-card-text"></i></a>
-        <a data-tab="comments"><i class="bi bi-chat-right"></i></a>
-        <a data-tab="saved"><i class="bi bi-heart"></i></a>
-        <a data-tab="liked"><i class="bi bi-hand-thumbs-up"></i></a>
-        <a data-tab="friends"><i class="bi bi-people"></i></a>
-    </div>
-    <div class="profile-body">
-        
+    <div class="profile-tabs-cont">
+        <div class="profile-tabs-mobile">
+            <a data-tab="posts"><i class="bi bi-card-text"></i></a>
+            <a data-tab="comments"><i class="bi bi-chat-right"></i></a>
+            <a data-tab="saved"><i class="bi bi-star"></i></a>
+            <a data-tab="followed"><i class="bi bi-heart"></i></a>
+            <a data-tab="friends"><i class="bi bi-people"></i></a>
+        </div>
+        <div class="profile-tabs-desktop">
+            <a data-tab="posts"><span>Posts</span></a>
+            <a data-tab="comments"><span>Comments</span></a>
+            <a data-tab="saved"><span>Saved</span></a>
+            <a data-tab="followed"><span>Followed</span></a>
+            <a data-tab="friends"><span>Friends</span></a>
+        </div>
+        <div class="profile-body">
+            
+        </div>
     </div>
 </div>
