--- a/OmneFictio.Web/Views/Home/Chapter.cshtml
+++ b/OmneFictio.Web/Views/Home/Chapter.cshtml
@@ -9,13 +9,9 @@
     }
 }
 @{
-    string userId = "-1";
-    string username = "";
-    string userPicture = "none";
-
-    userId = User.Claims.FirstOrDefault(claim => claim.Type == "nameid")?.Value ?? "-1";
-    username = User.Claims.FirstOrDefault(claim => claim.Type == "unique_name")?.Value ?? "";
-    userPicture = User.Claims.FirstOrDefault(claim => claim.Type == "actort")?.Value ?? "none";
+    string? userId = User.FindFirst("nameid")?.Value ?? null;
+    string? username = User.FindFirst("unique_name")?.Value ?? null;
+    string? userPicture = User.FindFirst("actort")?.Value ?? null;
 }
 <template id="chapter_instance">
     <div class="ch-header">
@@ -80,7 +76,7 @@
 
 </div>
 
-@if (userId != "-1")
+@if (userId != null)
 { ///images/users/
     <div class="add_comment-cont">
         <textarea placeholder="This is where we comment." id="commentBody"></textarea>
