--- a/OmneFictio.Web/Views/Settings/Settings.cshtml
+++ b/OmneFictio.Web/Views/Settings/Settings.cshtml
@@ -9,13 +9,9 @@
     }
 }
 @{
-    string userId = "-1";
-    string username = "";
-    string userPicture = "none";
-
-    userId = User.Claims.FirstOrDefault(claim => claim.Type == "nameid")?.Value ?? "-1";
-    username = User.Claims.FirstOrDefault(claim => claim.Type == "unique_name")?.Value ?? "";
-    userPicture = User.Claims.FirstOrDefault(claim => claim.Type == "actort")?.Value ?? "none";
+    string? userId = User.FindFirst("nameid")?.Value ?? null;
+    string? username = User.FindFirst("unique_name")?.Value ?? null;
+    string? userPicture = User.FindFirst("actort")?.Value ?? null;
 }
 
 <nav>
