fetch profile posts with existing functions 1

--- a/OmneFictio.Web/Views/Profile/Profile.cshtml
+++ b/OmneFictio.Web/Views/Profile/Profile.cshtml
@@ -82,7 +82,7 @@
             <a data-tab="followed"><span>Followed</span></a>
             <a data-tab="friends"><span>Friends</span></a>
         </div>
-        <div class="profile-body">
+        <div id="profile-body">
             
         </div>
     </div>
