--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -48,6 +48,7 @@
     --settings-activetab: #3e6e7a;
     //profile
     --profile-activetab: #3e6e7a;
+    --profile-post-color: #272727;
     
     //----------
     --button-red: #963a3a;
@@ -108,6 +109,7 @@
     --settings-activetab: #32a1bc;
     //profile
     --profile-activetab: #32a1bc;
+    --profile-post-color: #ffffff;
     //----------
 
 
