--- a/OmneFictio.Web/wwwroot/css/profile.css
+++ b/OmneFictio.Web/wwwroot/css/profile.css
@@ -194,18 +194,21 @@
 
 .profile-tabs-mobile {
   display: flex;
-  height: 48px;
+  min-height: 48px;
 }
 
 .profile-tabs-desktop {
   display: none;
-  height: 38px;
+  min-height: 38px;
 }
 
-.profile-body {
+#profile-body {
   width: 100%;
-  padding: 10px 10px;
+  padding: 20px 0;
   border-top: 1px solid var(--background-color2);
+}
+#profile-body .post {
+  background-color: var(--profile-post-color);
 }
 
 @media (min-width: 992px) {
@@ -219,6 +222,7 @@
   }
   .profile-cont .profile-details .pr-header {
     flex-direction: column;
+    flex-wrap: unset;
   }
   .profile-cont .profile-details .pr-header .pr-img_cont img {
     width: 80%;
