--- a/OmneFictio.Web/wwwroot/css/profile.scss
+++ b/OmneFictio.Web/wwwroot/css/profile.scss
@@ -31,6 +31,7 @@
                 height: 100px;
                 width: 100px;
                 border-radius: 10px;
+                //aspect-ratio: 1 / 1;
             }
         }
 
@@ -219,18 +220,22 @@
 
 .profile-tabs-mobile {
     display: flex;
-    height: 48px;
+    min-height: 48px;
 }
 
 .profile-tabs-desktop {
     display: none;
-    height: 38px;
+    min-height: 38px;
 }
 
-.profile-body {
+#profile-body {
     width: 100%;
-    padding: 10px 10px;
+    padding: 20px 0;
     border-top: 1px solid var(--background-color2);
+
+    .post{
+        background-color: var(--profile-post-color);
+    }
 }
 
 
@@ -255,6 +260,7 @@
 
             .pr-header {
                 flex-direction: column;
+                flex-wrap: unset;
 
                 .pr-img_cont {
                     img {
