profile get posts of given user

--- a/OmneFictio.Web/Views/Profile/Profile.cshtml
+++ b/OmneFictio.Web/Views/Profile/Profile.cshtml
@@ -83,7 +83,21 @@
             <a data-tab="friends"><span>Friends</span></a>
         </div>
         <div id="profile-body">
-            
+            <div id="profile-posts">
+
+            </div>
+            <div id="profile-comments">
+                
+            </div>
+            <div id="profile-saved">
+                
+            </div>
+            <div id="profile-followed">
+                
+            </div>
+            <div id="profile-friends">
+                
+            </div>
         </div>
     </div>
 </div>
