--- a/OmneFictio.Web/wwwroot/css/profile.scss
+++ b/OmneFictio.Web/wwwroot/css/profile.scss
@@ -15,6 +15,7 @@
     flex-direction: column;
     padding: 0 10px;
     gap: 10px 0;
+    flex-shrink: 0;
 
     .pr-header {
         display: flex;
@@ -229,12 +230,24 @@
 }
 
 #profile-body {
-    width: 100%;
+    min-height: 100vh;
     padding: 20px 0;
     border-top: 1px solid var(--background-color2);
 
     .post{
         background-color: var(--profile-post-color);
+        .p-info{
+            background-color: var(--profile-post-color);
+        }
+        .usercard-onhover{
+            background-color: var(--profile-post-color) !important;
+        }
+    }
+    > div {
+        display: none;
+    }
+    > div.active{
+        display: block;
     }
 }
 
