--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -105,6 +105,9 @@ main {
             width: 100%;
             .post{
                 background-color: var(--background-color2);
+                .p-info{
+                    background-color: var(--background-color2);
+                }
             }
         }
     }
